--- a/index.css
+++ b/index.css
@@ -2,9 +2,8 @@ body{
   background-color: pink;
 }
 
-h1 {
+body {
     color: #247DCB;
-    transition: color 0.5s ease-in-out;
 }
 .btn {
     cursor: pointer;
