--- a/index.css
+++ b/index.css
@@ -1,8 +1,5 @@
-body{
-  background-color: #F7DBF2;
-}
-
 body {
+    background-color: #5e5b5d;
     color: gray;
 }
 .btn {
@@ -22,4 +19,23 @@ body {
 
 .showing {
     display: block;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.bgImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    z-index: -1;
+    animation: fadeIn 0.5s linear;
 }
